--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Praveen Kumar</h1>
-        <p>Architecture Student | Tech Enthusiast</p>
+        <h1>PK THE DARK KPS</h1>
+        <p>Artificial intelligence and data Student | Tech MONSTER</p>
     </header>
 
     <section id="about">
